@@ -24,6 +24,8 @@ inappropriate by distribution packagers, so 1.23.3 adds build option
 - BASIC: Fixed a subtle bug in comparison functions where comparing large
   64-bit integers that can't be accurately stored in a float may give
   incorrect answers.
+- BASIC: The vector dot product now works correctly. (Note this doesn't work
+  in RISC OS ARM BBC BASIC, but now works the same as BBCSDL.)
 
 * 1.23.5 - 06 April 2025
 - General: Implement code fixes based on GCC 14.2's -fanalyze feature.
